--- a/tab.html
+++ b/tab.html
@@ -7,10 +7,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-:root{
-  --bg:#103167;
-}
-
 /* ---------- PAGE BACKGROUNDS ---------- */
 #page1 {
   background: url('back3.PNG') no-repeat center center/cover;
@@ -38,11 +34,12 @@
   display:flex;
 }
 
+/* REMOVE ANY COLOR BACKGROUNDS */
 html,body{
   height:100%;
   margin:0;
   padding:0;
-  background:#103167 !important;
+  background: transparent !important;
   color:#fff;
   font-family: system-ui;
 }
@@ -61,7 +58,6 @@ body, button, h1, h4, p, div, span {
 /* PAGE 1 */
 #page1 p{
   font-size:100px;
-  color:#103167;
   padding:20px;
 }
 
@@ -167,7 +163,7 @@ body, button, h1, h4, p, div, span {
   <button id="tapArea" style="position:absolute; inset:0; background:transparent; border:none;"></button>
 </div>
 
-<!-- PAGE 3: QUESTIONS -->
+<!-- PAGE 3 -->
 <div id="page3" class="app-page">
   <h4 id="questionText"></h4>
   <div id="answersGrid"></div>
@@ -289,10 +285,8 @@ function finishGame(){
     d: 'mystery'
   };
 
-  // Map the selected answer to winner key
   const choiceKey = answersSelected[1] ? answerToWinner[answersSelected[1]] : "mystery";
 
-  // Set the image
   winnerImage.src = winnerImages[choiceKey];
 
   const giftMap = {
@@ -308,10 +302,8 @@ function finishGame(){
 
   show(winner);
 
-  // Return to page1 after 7 seconds
   setTimeout(()=>show(page1), 7000);
 }
-
 </script>
 
 </body>
