--- a/tab.html
+++ b/tab.html
@@ -9,7 +9,7 @@
 <style>
 /* ---------- PAGE BACKGROUNDS ---------- */
 #page1 {
-  background: url('back3.PNG') no-repeat center center/cover;
+  background: url('first1.PNG') no-repeat center center/cover;
 }
 #page3 {
   background: url('back2.PNG') no-repeat center center/cover;
@@ -308,3 +308,4 @@ function finishGame(){
 
 </body>
 </html>
+
