Modify background images and styles in tab.html
Updated background images and styles for the game pages.

--- a/tab.html
+++ b/tab.html
@@ -9,13 +9,13 @@
 <style>
 /* ---------- PAGE BACKGROUNDS ---------- */
 #page1 {
-  background: url('first1.PNG') no-repeat center center/cover;
+  background: url('back1.png') no-repeat center center/cover;
 }
 #page3 {
-  background: url('back2.PNG') no-repeat center center/cover;
+  background: url('back2.png') no-repeat center center/cover;
 }
 #winner {
-  background: url('back1.PNG') no-repeat center center/cover;
+  background: url('back1.png') no-repeat center center/cover;
 }
 
 .app-page {
@@ -308,4 +308,5 @@ function finishGame(){
 
 </body>
 </html>
+
 
