--- a/tab.html
+++ b/tab.html
@@ -7,6 +7,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
+  * {
+  font-family: Calibri, Arial, sans-serif !important;
+  text-transform: uppercase !important;
+}
 /* ======== AUTO SCALE WRAPPER FOR 800×1340 DESIGN ======== */
 html, body {
   margin: 0;
@@ -303,3 +307,4 @@ function finishGame(){
 
 </body>
 </html>
+
