--- a/tab.html
+++ b/tab.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Mini Game — Auto Fit</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
 <style>
 * {
   font-family: Calibri, Arial, sans-serif !important;
   text-transform: uppercase !important;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -43,15 +43,9 @@ html, body {
   display: flex;
 }
 
-#page1 {
-  background: url('back3.png') center/cover no-repeat;
-}
-#page3 {
-  background: url('back2.png') center/cover no-repeat;
-}
-#winner {
-  background: url('back1.png') center/cover no-repeat;
-}
+#page1 { background: url('back3.png') center/cover no-repeat; }
+#page3 { background: url('back2.png') center/cover no-repeat; }
+#winner { background: url('back1.png') center/cover no-repeat; }
 
 #page1 p {
   font-size: 70px;
@@ -102,6 +96,7 @@ html, body {
   border: none;
   margin-top: 30px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 #winner img {
@@ -136,29 +131,30 @@ html, body {
 <body>
 <div id="scaleWrap">
 
-<!-- PAGE 1 -->
-<div id="page1" class="app-page active">
-  <p>PICK YOUR SUN TOY & MEET YOUR FUTURE BESTIE!</p>
-  <button id="tapArea" style="position:absolute; inset:0; background:transparent; border:none;"></button>
-</div>
+  <!-- PAGE 1 -->
+  <div id="page1" class="app-page active">
+    <p>PICK YOUR SUN TOY & MEET YOUR FUTURE BESTIE!</p>
+    <button id="tapArea" style="position:absolute; inset:0; background:transparent; border:none;"></button>
+  </div>
 
-<!-- PAGE 3 -->
-<div id="page3" class="app-page">
-  <h4 id="questionText"></h4>
-  <div id="answersGrid"></div>
-  <button id="nextBtn">Next</button>
-</div>
+  <!-- PAGE 3 -->
+  <div id="page3" class="app-page">
+    <h4 id="questionText"></h4>
+    <div id="answersGrid"></div>
+    <button id="nextBtn">Next</button>
+  </div>
 
-<!-- WINNER PAGE -->
-<div id="winner" class="app-page">
-  <h1></h1>
-  <img id="winnerImage" src="" alt="Winner">
-  <p id="winnerSub"></p>
-</div>
+  <!-- WINNER PAGE -->
+  <div id="winner" class="app-page">
+    <h1></h1>
+    <img id="winnerImage" src="" alt="Winner">
+    <p id="winnerSub"></p>
+  </div>
 
 </div>
 
 <script>
+// SCALE FUNCTION FOR DIFFERENT DEVICES
 function scaleGame() {
   const designW = 800;
   const designH = 1340;
@@ -172,6 +168,7 @@ function scaleGame() {
 window.onload = scaleGame;
 window.onresize = scaleGame;
 
+// ELEMENTS
 const page1 = document.getElementById("page1");
 const page3 = document.getElementById("page3");
 const winner = document.getElementById("winner");
@@ -181,6 +178,7 @@ const answersGrid = document.getElementById("answersGrid");
 const nextBtn = document.getElementById("nextBtn");
 const winnerSub = document.getElementById("winnerSub");
 
+// QUESTIONS
 const questions = [
   { id:1, text:"When your friends want to make plans, what’s your role?", fontSize:"48px", answerFontSize:"30px", answers:[
       {id:'a', label:'I’m the planner-\nTime, place,reminders? \nAll me! 📋 '},
@@ -206,6 +204,7 @@ const questions = [
   ]}
 ];
 
+// WINNER IMAGES
 const winnerImages = {
   gold:'1.png',
   silver:'2.png',
@@ -218,6 +217,7 @@ function show(p){
   p.classList.add('active');
 }
 
+// START GAME
 tapArea.onclick = ()=>{
   currentIndex = 0;
   answersSelected = {};
@@ -228,6 +228,7 @@ tapArea.onclick = ()=>{
 let currentIndex = 0;
 let answersSelected = {};
 
+// RENDER QUESTION
 function renderQuestion(i){
   const q = questions[i];
   questionText.innerHTML = q.text.replace(/\n/g, "<br>");
@@ -262,6 +263,7 @@ function renderQuestion(i){
   };
 }
 
+// FINISH GAME
 function finishGame(){
   const answerToWinner = { a: 'gold', b: 'silver', c: 'bronze', d: 'mystery' };
   const choiceKey = answersSelected[1] ? answerToWinner[answersSelected[1]] : "mystery";
