--- a/tab.html
+++ b/tab.html
@@ -43,9 +43,9 @@ html, body {
   display: flex;
 }
 
-#page1 { background: url('back2.png') center/cover no-repeat; }
-#page3 { background: url('back2.png') center/cover no-repeat; }
-#winner { background: url('back1.png') center/cover no-repeat; }
+#page1 { background: url('back2.jpeg') center/cover no-repeat; }
+#page3 { background: url('back2.jpeg') center/cover no-repeat; }
+#winner { background: url('back1.jpeg') center/cover no-repeat; }
 
 #page1 p {
   font-size: 70px;
